# denso_cobotta_ros

./: CHANGELOG.md  README.md
denso_cobotta_bringup/: CMakeLists.txt  package.xml
denso_cobotta_bringup/launch/: denso_cobotta_bringup.launch
denso_cobotta_control/: CMakeLists.txt  package.xml
denso_cobotta_control/include/denso_cobotta_control/: denso_cobotta_hw.h
denso_cobotta_control/launch/: denso_cobotta_control.launch
denso_cobotta_control/src/: denso_cobotta_control.cpp  denso_cobotta_hw.cpp
denso_cobotta_descriptions/: CMakeLists.txt  package.xml
denso_cobotta_descriptions/cobotta_description/: J4.dae  _old_cobotta.urdf  cobotta.body.urdf.xacro  cobotta.urdf  cobotta.urdf.xacro  denso_cobotta_control.yaml  gazebo_cobotta_control.yaml  pad.dae  parallel.body.urdf.xacro  parallel.urdf.xacro  vacuum.body.urdf.xacro  vacuum.dae  vacuum.urdf.xacro
denso_cobotta_driver/: CMakeLists.txt  package.xml
denso_cobotta_driver/config/: parameters.yaml
denso_cobotta_driver/include/denso_cobotta_driver/: cobotta_common.h  cobotta_ioctl.h  cobotta_state.h  denso_cobotta_driver.h
denso_cobotta_driver/launch/: denso_cobotta_driver.launch
denso_cobotta_driver/msg/: RobotState.msg  SafeState.msg
denso_cobotta_driver/src/: cobotta_state.cpp  denso_cobotta_driver.cpp
denso_cobotta_driver/srv/: ArmPosition.srv  GetBrakeState.srv  GetMotorState.srv  SetBrakeState.srv  SetLEDState.srv  set_motor_state.srv
denso_cobotta_gazebo/: CMakeLists.txt  package.xml
denso_cobotta_gazebo/launch/: denso_cobotta_gazebo.launch
denso_cobotta_gripper/: CMakeLists.txt  package.xml
denso_cobotta_gripper/action/: GripperMove.action  VacuumMove.action
denso_cobotta_gripper/config/: gripper_parallel.yaml  gripper_vacuum.yaml
denso_cobotta_gripper/include/denso_cobotta_gripper/: denso_cobotta_gripper.h  gripper_base.h  gripper_parallel.h  gripper_vacuum.h
denso_cobotta_gripper/launch/: denso_cobotta_gripper.launch
denso_cobotta_gripper/src/: denso_cobotta_gripper.cpp  gripper_base.cpp  gripper_parallel.cpp  gripper_vacuum.cpp
denso_cobotta_lib/: CMakeLists.txt  package.xml
denso_cobotta_lib/include/denso_cobotta_lib/: brake.h  buttons.h  cobotta.h  cobotta_common.h  cobotta_exception.h  cobotta_ioctl.h  driver.h  gripper.h  led.h  message.h  mini_io.h  motor.h  publish_info.h  safety_mcu.h
denso_cobotta_lib/src/: brake.cpp  buttons.cpp  cobotta.cpp  cobotta_exception.cpp  driver.cpp  gripper.cpp  led.cpp  message.cpp  mini_io.cpp  motor.cpp  publish_info.cpp  safety_mcu.cpp
denso_cobotta_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
denso_cobotta_moveit_config/config/: cobotta.srdf  cobotta.srdf.xacro  controllers.yaml  controllers_with_parallel.yaml  fake_controllers.yaml  joint_limits.yaml  parallel.srdf.xacro  vacuum.srdf.xacro
denso_cobotta_moveit_config/launch/: cobotta_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
denso_cobotta_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
scripts/: packing_pose.py
