<?xml version="1.0"?>
<package format="2">
  <name>denso_cobotta_bringup</name>
  <version>1.2.1</version>
  <description>The denso_cobotta_bringup package</description>
  <maintainer email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>
  <license>GPL</license>
  <author email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
