<?xml version="1.0"?>
<package format="2">
  <name>denso_cobotta_bringup</name>
  <version>1.2.4</version>
  <description>The denso_cobotta_bringup package</description>
  <maintainer email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</maintainer>
  <license>GPL</license>
  <author email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
