<?xml version="1.0"?>
<package format="2">
  <name>denso_cobotta_descriptions</name>
  <version>1.1.0</version>
  <description>The denso_cobotta_descriptions package</description>
  <maintainer email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>
  <license>GPL</license>
  <author email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
