<?xml version="1.0"?>
<package format="2">
  <name>denso_cobotta_descriptions</name>
  <version>1.2.4</version>
  <description>The denso_cobotta_descriptions package</description>
  <maintainer email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</maintainer>
  <license>GPL</license>
  <url type="website">http://wiki.ros.org/denso_cobotta_ros</url>
  <author email="fa-support@denso-wave.com">DENSO WAVE INCORPORATED</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
