<?xml version="1.0"?>
<package format="2">
  <name>denso_cobotta_gazebo</name>
  <version>1.2.2</version>
  <description>The denso_cobotta_gazebo package</description>
  <maintainer email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>
  <license>GPL</license>
  <url type="website">http://wiki.ros.org/denso_cobotta_ros</url>
  <author email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>

