<?xml version="1.0"?>
<package format="2">
  <name>denso_cobotta_lib</name>
  <version>1.2.2</version>
  <description>The denso_cobotta_lib package</description>
  <license>GPL</license>

  <maintainer email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>
  <author email="fa-support@denso-wave.co.jp">DENSO WAVE INCORPORATED</author>
  <url type="website">http://wiki.ros.org/denso_cobotta_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <export>
  </export>
</package>
